[package]
name = "rp-watch"
version = "0.1.0"
authors = ["Qingyao Sun <sunqingyao19970825@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.3"
kuchiki = "0.8.1"
regex = "1"
lazy_static = "1.4.0"
